# slavic_oracle_bot

./: Dockerfile  README.md  main.py  pyproject.toml  setup.cfg  utils.py
.github/actions/setup/: action.yml
.github/workflows/: release.yml  test.yml
bot/: bot.py  location.py  menu.py
cards/: card.py  card_descriptions.csv  cards_reader.py
tests/: test_utils.py
tests/bot/: test_location.py  test_menu.py
tests/cards/: __init__.py  test_cards_reader.py
